# mobile_robot_ai

./: CMakeLists.txt  LICENSE  README.md  config.json  config.sh  control_config.txt  git_commands.md  package.xml  run.py  run.sh
launch/: simulation_launch.py
maps/: map.pgm  map.yaml
mobile_robot_ai/: ai_prompts.py  controls.py  utils.py  ziegler_nichols.py
rviz/: config.rviz
scripts/: control_handler.py  control_openai.py  control_pid.py  control_simple_lin_reg.py  open_ai_control.py  pid_control.py  set_goal.py  simple_lin_reg_control.py
src/: data_subscriber.cpp
worlds/custom_turtlebot3_world/: model.config  model.sdf  waffle.model
worlds/custom_turtlebot3_world/meshes/: world.dae
